--- a/conf/zim.yml
+++ b/conf/zim.yml
@@ -35,19 +35,19 @@ rule-providers:
         type: http
         behavior: domain
         url: "https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/reject.txt"
-        path: D:\1.Sys_Tools\Clash\rules\reject.txt
+        #path: D:\1.Sys_Tools\Clash\rules\reject.txt
         interval: 86400
     AdBlock: 
         type: http
         behavior: classical
         url: https://cdn.jsdelivr.net/gh/Semporia/Clash@master/Rule/AdBlock.yaml
-        path: D:\1.Sys_Tools\Clash\rules\AdBlock.yaml
+        #path: D:\1.Sys_Tools\Clash\rules\AdBlock.yaml
         interval: 86400
     YouTube: 
         type: http
         behavior: classical
         url: https://cdn.jsdelivr.net/gh/Semporia/Clash@master/Rule/YouTube.yaml
-        path: D:\1.Sys_Tools\Clash\rules\YouTube.yaml
+        #path: D:\1.Sys_Tools\Clash\rules\YouTube.yaml
         interval: 86400
 
 rules:
