--- a/conf/zim.yml
+++ b/conf/zim.yml
@@ -31,11 +31,10 @@ proxy-providers:
             lazy: true
             url: http://www.gstatic.com/generate_204
 proxy-groups:
-    - { name: zim ,type: select, proxies: [AdBlock,自动选择,Fallback]}
+    - { name: zim ,type: select, proxies: [自动选择,骇网,ChatGPT]}
     - { name: 骇网 , type: select, use: [Helium Network]}
     - { name: ChatGPT , type: select, proxies: [ChatGPT专用-001-美国,ChatGPT专用-002,ChatGPT专用-003,ChatGPT专用-004]}
-    - { name: 自动选择 ,type: url-test , proxies: [骇网], url: 'http://www.gstatic.com/generate_204', interval: 600}
-    - { name: Fallback, type: fallback, proxies: [骇网], url: 'http://www.gstatic.com/generate_204', interval: 7200 }
+    - { name: 自动选择 ,type: url-test , use: [Helium Network], url: 'http://www.gstatic.com/generate_204', interval: 600}
     - { name: AdBlock, type: select, proxies: [REJECT] }
 
 rule-providers:
