--- a/conf/zim.yml
+++ b/conf/zim.yml
@@ -145,7 +145,7 @@ proxy-groups:
     - { name: 海豚云 , type: select, use: [hty]}
     - { name: 其他 , type: select, use: [other]}
     - { name: 美国 , type: select, use: [美国节点,AI,AI_2,AI_3]}
-    - { name: Tg,type: select ,proxies: [tg_1,tg_2,tg_3]}
+    - { name: tg,type: select ,use: [tg_1,tg_2,tg_3]}
     - { name: ChatGPT , type: url-test, proxies: [ChatGPT专用-001-美国,ChatGPT专用-002,ChatGPT专用-003,ChatGPT专用-004,美国], url: 'http://www.gstatic.com/generate_204', interval: 300}
     - { name: 自动选择 ,type: url-test , use: [Helium Network,PH-TG,分享社,hty,other], url: 'http://www.gstatic.com/generate_204', interval: 300}
     - { name: AdBlock, type: select, proxies: [REJECT] }
