--- a/conf/zim.yml
+++ b/conf/zim.yml
@@ -158,12 +158,12 @@ proxy-providers:
 
 proxy-groups:
     - { name: zim ,type: select, proxies: [自动选择,骇网,胖虎,分享社,海豚云,快狗云,其他,ChatGPT]}
-    - { name: 骇网 , type: url-test, use: [Helium Network], url: 'http://www.gstatic.com/generate_204', interval: 300}
-    - { name: 胖虎 , type: url-test, use: [PH-TG], url: 'http://www.gstatic.com/generate_204', interval: 300}
-    - { name: 分享社 , type: url-test, use: [分享社], url: 'http://www.gstatic.com/generate_204', interval: 300}
-    - { name: 海豚云 , type: url-test, use: [hty], url: 'http://www.gstatic.com/generate_204', interval: 300}
-    - { name: 快狗云 , type: url-test, use: [kgy], url: 'http://www.gstatic.com/generate_204', interval: 300}
-    - { name: 其他 , type: url-test, use: [other], url: 'http://www.gstatic.com/generate_204', interval: 300}
+    - { name: 骇网 , type: select, use: [Helium Network]}
+    - { name: 胖虎 , type: select, use: [PH-TG]}
+    - { name: 分享社 , type: select, use: [分享社]}
+    - { name: 海豚云 , type: select, use: [hty]}
+    - { name: 快狗云 , type: select, use: [kgy]}
+    - { name: 其他 , type: select, use: [other]}
     - { name: 美国 , type: select, use: [美国节点,AI,AI_2,AI_3,AI_4]}
     - { name: tg,type: select ,use: [tg_1,tg_2,tg_3]}
     - { name: ChatGPT , type: url-test, proxies: [ChatGPT专用-001-美国,ChatGPT专用-002,ChatGPT专用-003,ChatGPT专用-004,美国], url: 'http://www.gstatic.com/generate_204', interval: 300}
