--- a/conf/zim.yml
+++ b/conf/zim.yml
@@ -98,8 +98,8 @@ proxy-providers:
             lazy: true
             url: http://www.gstatic.com/generate_204
     AI_4:
-        type: file
-        path: D:\1.Sys_Tools\Clash\conf\1694676282674.yml
+        type: http
+        url: https://www.kuaidog001.top/api/v1/client/subscribe?token=57207ae779027539ab800892d5a3a7c8&flag=clash
         filter: '美国|US|纽约'
         interval: 3600
         health-check:
@@ -147,8 +147,9 @@ proxy-providers:
             lazy: true
             url: http://www.gstatic.com/generate_204
     kgy:
-        type: file
-        url: D:\1.Sys_Tools\Clash\conf\1694676282674.yml
+        type: http
+        url: https://www.kuaidog001.top/api/v1/client/subscribe?token=57207ae779027539ab800892d5a3a7c8&flag=clash
+        #path: D:\1.Sys_Tools\Clash\conf\1694676282674.yml
         interval: 3600
         health-check:
             enable: true
