--- a/conf/zim.yml
+++ b/conf/zim.yml
@@ -167,11 +167,10 @@ proxy-groups:
     - { name: 其他 , type: select, use: [other]}
     - { name: 美国 , type: select, use: [美国节点,AI,AI_2,AI_3,AI_4]}
     - { name: tg,type: select ,use: [tg_1,tg_2,tg_3]}
-    - { name: music,type: select,proxies: [ 🇯🇵 日本节点]}
+    - { name: music,type: select,proxies: [DIRECT]}
     - { name: ChatGPT , type: url-test, proxies: [ChatGPT专用-001-美国,ChatGPT专用-002,ChatGPT专用-003,ChatGPT专用-004,美国], url: 'http://www.gstatic.com/generate_204', interval: 300}
     - { name: 自动选择 ,type: url-test , use: [Helium Network,PH-TG,分享社,hty,kgy,other], url: 'http://www.gstatic.com/generate_204', interval: 300}
     - { name: AdBlock, type: select, proxies: [REJECT] }
-    - { name: 🇯🇵 日本节点,type: url-test, url: http://www.gstatic.com/generate_204 ,interval: 300,tolerance: 100 ,proxies: [ DIRECT ] }
 
 rule-providers:
     reject:
