--- a/conf/zim.yml
+++ b/conf/zim.yml
@@ -137,6 +137,36 @@ proxy-providers:
             interval: 600
             lazy: true
             url: http://www.gstatic.com/generate_204
+    m_1:
+        type: http
+        url: https://s.haituncloud.vip/link/Zv3Er4wI4iE86SDZ?clash=1
+        filter: '日本|东京|🇯🇵|JP|Japan'
+        interval: 3600
+        health-check:
+            enable: true
+            interval: 600
+            lazy: true
+            url: http://www.gstatic.com/generate_204
+    m_2:
+        type: http
+        url: https://fast.shiyuanyinian.xyz/api/v1/client/subscribe?token=f4342a117826459f54dd4f863c691a88&flag=clash
+        filter: '日本|东京|🇯🇵|JP|Japan'
+        interval: 3600
+        health-check:
+            enable: true
+            interval: 600
+            lazy: true
+            url: http://www.gstatic.com/generate_204
+    m_3:
+        type: file
+        path: D:\1.Sys_Tools\Clash\conf\1691126068731.yml
+        filter: '日本|东京|🇯🇵|JP|Japan'
+        interval: 3600
+        health-check:
+            enable: true
+            interval: 600
+            lazy: true
+            url: http://www.gstatic.com/generate_204
     hty:
         type: file
         path: D:\1.Sys_Tools\Clash\conf\1692322381380.yml
@@ -167,7 +197,7 @@ proxy-groups:
     - { name: 其他 , type: select, use: [other]}
     - { name: 美国 , type: select, use: [美国节点,AI,AI_2,AI_3,AI_4]}
     - { name: tg,type: select ,use: [tg_1,tg_2,tg_3]}
-    - { name: music,type: select,proxies: [DIRECT]}
+    - { name: music,type: select,use: [m_1,m_2,m_3]}
     - { name: ChatGPT , type: url-test, proxies: [ChatGPT专用-001-美国,ChatGPT专用-002,ChatGPT专用-003,ChatGPT专用-004,美国], url: 'http://www.gstatic.com/generate_204', interval: 300}
     - { name: 自动选择 ,type: url-test , use: [Helium Network,PH-TG,分享社,hty,kgy,other], url: 'http://www.gstatic.com/generate_204', interval: 300}
     - { name: AdBlock, type: select, proxies: [REJECT] }
