--- a/conf/zim.yml
+++ b/conf/zim.yml
@@ -148,8 +148,8 @@ proxy-providers:
             lazy: true
             url: http://www.gstatic.com/generate_204
     m_2:
-        type: http
-        url: https://fast.shiyuanyinian.xyz/api/v1/client/subscribe?token=f4342a117826459f54dd4f863c691a88&flag=clash
+        type: file
+        path: D:\1.Sys_Tools\Clash\conf\1691458633120.yml
         filter: '日本|东京|🇯🇵|JP|Japan'
         interval: 3600
         health-check:
