--- a/conf/zim.yml
+++ b/conf/zim.yml
@@ -197,7 +197,8 @@ proxy-groups:
     - { name: 其他 , type: select, use: [other]}
     - { name: 美国 , type: select, use: [美国节点,AI,AI_2,AI_3,AI_4]}
     - { name: tg,type: select ,use: [tg_1,tg_2,tg_3]}
-    - { name: music,type: url-test,use: [m_1,m_2,m_3],url: 'http://www.gstatic.com/generate_204',interval: 300,tolerance: 100}
+    - { name: music,type: select ,proxies: [音乐节点,tg_1,tg_2,tg_3]}
+    - { name: 音乐节点,type: url-test,use: [m_1,m_2,m_3],url: 'http://www.gstatic.com/generate_204',interval: 300,tolerance: 100}
     - { name: ChatGPT , type: url-test, proxies: [ChatGPT专用-001-美国,ChatGPT专用-002,ChatGPT专用-003,ChatGPT专用-004,美国], url: 'http://www.gstatic.com/generate_204', interval: 300}
     - { name: 自动选择 ,type: url-test , use: [Helium Network,PH-TG,分享社,hty,kgy,other], url: 'http://www.gstatic.com/generate_204', interval: 300}
     - { name: AdBlock, type: select, proxies: [REJECT] }
