--- a/conf/zim.yml
+++ b/conf/zim.yml
@@ -138,8 +138,8 @@ proxy-providers:
             lazy: true
             url: http://www.gstatic.com/generate_204
     m_1:
-        type: http
-        url: https://s.haituncloud.vip/link/Zv3Er4wI4iE86SDZ?clash=1
+        type: file
+        path: D:\1.Sys_Tools\Clash\conf\1692322381380.yml
         filter: '日本|东京|🇯🇵|JP|Japan'
         interval: 3600
         health-check:
