--- a/conf/zim.yml
+++ b/conf/zim.yml
@@ -19,12 +19,33 @@ proxies:
     - { name: ChatGPT专用-002, server: 95.169.24.158, port: 443, type: vmess, uuid: 2f84de32-1fb0-4b40-be37-b811f7050b70, alterId: 0, cipher: auto, tls: false, skip-cert-verify: false, network: ws, ws-opts: { path: /, headers: { Host: api.cloud.189.cn } } }
     - { name: ChatGPT专用-003, server: 95.169.24.158, port: 36395, type: vmess, uuid: 14199193-87b8-439f-d78c-a430103707e3, alterId: 0, cipher: auto, tls: false, skip-cert-verify: false, network: ws, ws-opts: { path: "/?ed=2048" } }
     - { name: ChatGPT专用-004, server: 199.115.229.12, port: 29080, type: vmess, uuid: 7e7c5056-ac2b-49e4-fbce-a47b09003e37, alterId: 0, cipher: auto, tls: false, skip-cert-verify: false }
-    - { name: vless1,server: root.lvyukun73.top,port: 443,type: vless,uuid: 933e7a99-1aee-4d6c-8975-36f4091723fe,tls: true,servername: root.lvyukun73.top,skip-cert-verify: true,network: ws,ws-opts:{ path: /JKLJOIJLIJ,headers: { Host: root.lvyukun73.top }}}
-    - { naem: vless2,server: 159.89.101.212,port: 52084,type: vless,uuid: 83d047b8-9147-4959-e3df-b831392229e0,tls: true,network: tcp,servername: 159.89.101.212}
+    - name: vless1
+      server: root.lvyukun73.top
+      port: 443
+      type: vless
+      uuid: 933e7a99-1aee-4d6c-8975-36f4091723fe
+      tls: true
+      servername: root.lvyukun73.top
+      skip-cert-verify: true
+      network: ws
+      ws-opts:
+          path: /JKLJOIJLIJ
+          headers:
+              Host: root.lvyukun73.top
+    - name: vless2
+      type: vless
+      server: 159.89.101.212
+      port: 52084
+      uuid: 83d047b8-9147-4959-e3df-b831392229e0
+      tls: true
+      network: tcp
+      servername: 159.89.101.212
     - { name: vless3, server: 1.spacezzzz.online,port: 12345,type: vless,uuid: bd2e5eae-14e9-49f6-f365-5317bcf019cd,tls: true,network: tcp,skip-cert-verify: true,servername: 1.spacezzzz.online}
     - { name: vless4, server: 23.26.98.125,port: 58015,type: vless,uuid: 92168fbf-fbf6-49ad-ecac-8017b991f1fd,tls: true,network: tcp,skip-cert-verify: true,servername: 23.26.98.125}
     - { name: vless5, server: test.albertj.top,port: 30224,type: vless,uuid: e43e6e4a-cb4b-46e6-f9ab-962058054c89,tls: true,network: tcp,skip-cert-verify: true,servername: test.albertj.top}
     - { name: vless6,server: wu.yilongdog.top,port: 443,type: vless,uuid: 601c9746-2161-4ee1-f7e2-5b0d5634fc9a,tls: true,servername: wu.yilongdog.top,skip-cert-verify: true,network: ws,ws-opts:{ path: /yilong950120,headers: { Host: wu.yilongdog.top }}}
+# vless等新增类型节点文档参考
+# https://github.com/MetaCubeX/Clash.Meta/blob/Meta/docs/config.yaml
 proxy-providers:
     十元: # 长期白嫖 每月20G
         type: http
