--- a/conf/zim.yml
+++ b/conf/zim.yml
@@ -43,7 +43,19 @@ proxies:
     - { name: vless3, server: 1.spacezzzz.online,port: 12345,type: vless,uuid: bd2e5eae-14e9-49f6-f365-5317bcf019cd,tls: true,network: tcp,skip-cert-verify: true,servername: 1.spacezzzz.online}
     - { name: vless4, server: 23.26.98.125,port: 58015,type: vless,uuid: 92168fbf-fbf6-49ad-ecac-8017b991f1fd,tls: true,network: tcp,skip-cert-verify: true,servername: 23.26.98.125}
     - { name: vless5, server: test.albertj.top,port: 30224,type: vless,uuid: e43e6e4a-cb4b-46e6-f9ab-962058054c89,tls: true,network: tcp,skip-cert-verify: true,servername: test.albertj.top}
-    - { name: vless6,server: wu.yilongdog.top,port: 443,type: vless,uuid: 601c9746-2161-4ee1-f7e2-5b0d5634fc9a,tls: true,servername: wu.yilongdog.top,skip-cert-verify: true,network: ws,ws-opts:{ path: /yilong950120,headers: { Host: wu.yilongdog.top }}}
+    - name: vless6
+      server: wu.yilongdog.top
+      port: 443
+      type: vless
+      uuid: 601c9746-2161-4ee1-f7e2-5b0d5634fc9a
+      tls: true
+      servername: wu.yilongdog.top
+      skip-cert-verify: true
+      network: ws
+      ws-opts:
+          path: /yilong950120
+          headers:
+              Host: wu.yilongdog.top
 # vless等新增类型节点文档参考
 # https://github.com/MetaCubeX/Clash.Meta/blob/Meta/docs/config.yaml
 proxy-providers:
