--- a/conf/zim.yml
+++ b/conf/zim.yml
@@ -32,14 +32,7 @@ proxies:
           path: /JKLJOIJLIJ
           headers:
               Host: root.lvyukun73.top
-    - name: vless2
-      type: vless
-      server: 159.89.101.212
-      port: 52084
-      uuid: 83d047b8-9147-4959-e3df-b831392229e0
-      tls: true
-      network: tcp
-      servername: 159.89.101.212
+    - { naem: vless2,server: 159.89.101.212,port: 52084,type: vless,uuid: 83d047b8-9147-4959-e3df-b831392229e0,tls: true,network: tcp,servername: 159.89.101.212}
     - { name: vless3, server: 1.spacezzzz.online,port: 12345,type: vless,uuid: bd2e5eae-14e9-49f6-f365-5317bcf019cd,tls: true,network: tcp,skip-cert-verify: true,servername: 1.spacezzzz.online}
     - { name: vless4, server: 23.26.98.125,port: 58015,type: vless,uuid: 92168fbf-fbf6-49ad-ecac-8017b991f1fd,tls: true,network: tcp,skip-cert-verify: true,servername: 23.26.98.125}
     - { name: vless5, server: test.albertj.top,port: 30224,type: vless,uuid: e43e6e4a-cb4b-46e6-f9ab-962058054c89,tls: true,network: tcp,skip-cert-verify: true,servername: test.albertj.top}
